Fix scroll on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,18 +4,20 @@
 
 html,
 body {
+  position: fixed;
   padding: 0;
   margin: 0;
   height: 100vh;
   width: 100vw;
+
   font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 #__next {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 a.menu-link span.menu-link-text {
